# scanopy-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
scanopy_cli/: __init__.py  cli.py  client.py  formatters.py  renderer.py  server_mermaid.py
skills/: SKILL.md
tests/: test_client.py
