[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scanopy-cli"
version = "0.1.0"
description = "CLI for the Scanopy network scanner API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Sosi", email = "albertotplaza@gmail.com" }]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]

[project.scripts]
sc = "scanopy_cli.cli:main"

[tool.setuptools.packages.find]
include = ["scanopy_cli*"]
